--- a/css/images.css
+++ b/css/images.css
@@ -29,26 +29,26 @@
 
 /* Add images to the slide show */
 
-.crossfade > figure:nth-child(1) { background-image: url('/Users/steve/2021/Work/011-SSSS-website/html/images/01-GS.jpg'); }
+.crossfade > figure:nth-child(1) { background-image: url('../images/01-GS.jpg'); }
 
 .crossfade > figure:nth-child(2) {
   animation-delay: 5s;
-  background-image: url('/Users/steve/2021/Work/011-SSSS-website/html/images/02-GS.jpg');
+  background-image: url('../images/02-GS.jpg');
 }
 
 .crossfade > figure:nth-child(3) {
   animation-delay: 10s;
-  background-image: url('/Users/steve/2021/Work/011-SSSS-website/html/images/03-GS.jpg');
+  background-image: url('../images/03-GS.jpg');
 }
 
 .crossfade > figure:nth-child(4) {
   animation-delay: 15s;
-  background-image: url('/Users/steve/2021/Work/011-SSSS-website/html/images/02-GS.jpg');
+  background-image: url('../images/02-GS.jpg');
 }
 
 .crossfade > figure:nth-child(5) {
   animation-delay: 20s;
-  background-image: url('/Users/steve/2021/Work/011-SSSS-website/html/images/03-GS.jpg');
+  background-image: url('../images/03-GS.jpg');
 }
 
 
