--- a/css/images.css
+++ b/css/images.css
@@ -33,7 +33,7 @@
 
 .crossfade > figure:nth-child(2) {
   animation-delay: 5s;
-  background-image: url('../../images/02-GS.jpg');
+  background-image: url('../images/02-GS.jpg');
 }
 
 .crossfade > figure:nth-child(3) {
